--- a/html/ahtml-description-list.html
+++ b/html/ahtml-description-list.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <dl>
-      <dt>DR bR ambedkar</dt>
+      <dt>DR B. R Ambedkar</dt>
       <dd>
-        He is a great man and one of the fienest personality in indian histroy
+        He is a great man and one of the finest personality in indian history
         that made our indians to stand strongF
       </dd>
       <dt>M.k>Gandhi</dt>
