--- a/html/ahtml-formatting-elements.html
+++ b/html/ahtml-formatting-elements.html
@@ -7,6 +7,7 @@
   <body>
     <p>101, first floor, sec-19, nr. navale brisge, vadgav - 411041</p>
 
+    <!-- pre: preserve spaces and line breaks, it will display as same as written in html  -->
     <pre>
  101, first floor, sec-19,
  nr. navale brisge,
@@ -25,7 +26,7 @@
     <p>This is <s> deleted element</s></p>
 
     <p>I am a <b>web developer</b> in pune</p>
-    <p>I am a <strong> web develope </strong> in pune</p>
+    <p>I am a <strong> web develop </strong> in pune</p>
 
     <p>hey! whats going on <b>champ</b>?</p>
     <p>thats like an <strong>athlete</strong></p>
