--- a/html/tasks/task-naukri.html
+++ b/html/tasks/task-naukri.html
@@ -98,7 +98,7 @@
         border: 2px solid#ff7555;
         box-sizing: border-box;
         padding: 5px;
-        margin: 36px;
+        margin: 40px;
         border-radius: 22px;
         background-color: #ff7555;
       }
@@ -217,16 +217,12 @@
   <body>
     <div>
       <header>
-        <img src="assests/images/naukri_Logo.png" alt="" />
+        <img src="../assests/images/naukri_Logo.png" alt="" />
         <p class="login">Already Registered?<a href=""> Login </a>here</p>
       </header>
     </div>
-    <div class="mx">
-      <span>Continue with</span>
-      <img class="google" src="assests/images/Google-1320568266385361674.png" />
-    </div>
     <div class="greenboy">
-      <img src="assests/images/green-boy.c8b59289.svg" alt="" />
+      <img src="../assests/images/green-boy.c8b59289.svg" alt="" />
       <ul class="instruction">
         <h4>On registering, you can</h4>
         <li>Build your profile and let recruiters find you</li>
@@ -242,7 +238,7 @@
         <div class="resume">
           <img
             class="resumefileimg"
-            src="assests/images/upload-file.841c292d (1).svg"
+            src="../assests/images/upload-file.841c292d (1).svg"
             alt=""
           />
           <input type="file" name="uploadresume" id="file" />
@@ -306,11 +302,11 @@
           <label for="radiobuttons">Work status</label>
           <input type="radio" name="size" id="small" />
           <label for="small" class="labels"
-            ><img src="assests/images/fresher.png" />Fresher</label
+            ><img src="../assests/images/fresher.png" />Fresher</label
           >
           <input type="radio" name="size" id="large" />
           <label for="large" class="labels"
-            ><img src="assests/images/experience.png" />Experience</label
+            ><img src="../assests/images/experience.png" />Experience</label
           >
         </div>
         <div>
@@ -318,7 +314,7 @@
             >Send me important updates on
             <img
               class="whatsapp"
-              src="assests/images/whatsapp-logo-app-png-4.png"
+              src="../assests/images/whatsapp-logo-app-png-4.png"
             />
             Whatspp</label
           >
@@ -341,10 +337,6 @@
         </div>
       </form>
     </div>
-    <div>
-      <span class="or">OR</span>
-    </div>
-
     <footer>
       <ul class="info">
         <li>
