--- a/html/tasks/task-plane.html
+++ b/html/tasks/task-plane.html
@@ -7,7 +7,7 @@
     <title>Plane</title>
     <style>
       body {
-        background-image: url(assests/images/cloudviewport.jfif);
+        background-image: url(../assests/images/cloudviewport.jfif);
         background-repeat: no-repeat;
         background-size: cover;
       }
@@ -62,7 +62,7 @@
   </head>
   <body>
     <div>
-      <img src="assests/images/horizontal-plane.png" />
+      <img src="../assests/images/horizontal-plane.png" />
     </div>
   </body>
 </html>
