--- a/html/tasks/task-profile.html
+++ b/html/tasks/task-profile.html
@@ -37,11 +37,11 @@
 	<p><h1>Welcome to my profile!</h1></p>
 	<P>This is <b>Ninad Bhoir</b> here, I am an engineer and looking for starting my graduate journey and I wish it will form your company.<p><br/>
 
-	<img src="Ninad-Passport size photo.jpeg" as width="200" height="200">
+	<img src="../assests/images/Ninad-Passport size photo.jpeg" as width="200" height="200">
 
 	 	
 	<p>Click below to see my resume.</p>
-	<a href="NP Ninad's Resume.pdf"> My resume</a>
+	<a href="../assests/images/ninad-resume.pdf"> My resume</a>
 
 	<section>
 		
