--- a/html/tasks/task-transition.html
+++ b/html/tasks/task-transition.html
@@ -45,20 +45,20 @@
     <div>
       <h1 class="fb">
         Welcome to Facebook!
-        <img src="assests/images/fbbwithoutback.png" alt="" />
+        <img src="../assests/images/fbbwithoutback.png" alt="" />
       </h1>
       <h1 class="insta">
-        Welcome to Instagram! <img src="assests/images/insta.png" alt="" />
+        Welcome to Instagram! <img src="../assests/images/insta.png" alt="" />
       </h1>
       <h1 class="whatsapp">
         Welcome to Whatsapp!
-        <img src="assests/images/whatsapp-logo-app-png-4.png" alt="" />
+        <img src="../assests/images/whatsapp-logo-app-png-4.png" alt="" />
       </h1>
       <h1 class="linkdin">
-        Welcome to Linkdin! <img src="assests/images/linkdn.png" alt="" />
+        Welcome to Linkdin! <img src="../assests/images/linkdn.png" alt="" />
       </h1>
       <h1 class="gmail">
-        Welcome to Gmail! <img src="assests/images/Gmail-Logo.png" alt="" />
+        Welcome to Gmail! <img src="../assests/images/Gmail-Logo.png" alt="" />
       </h1>
     </div>
   </body>
