--- a/DOM/l2.3-event-propagation.html
+++ b/DOM/l2.3-event-propagation.html
@@ -26,7 +26,7 @@
         function () {
           console.log("div clicked");
         },
-        false //falsing event propagration
+        false //falsing event propagation
       );
 
       // stopImmediatePropagation() will execuate only function in which it has been written
