--- a/DOM/l2.4-preventDefault.html
+++ b/DOM/l2.4-preventDefault.html
@@ -12,16 +12,16 @@
       <input type="submit" />
     </form>
     <script>
-      // preventDefault() prevents default bheavior and gives below assign bheavior to selected one
+      // preventDefault() prevents default behavior and gives below assign behavior to selected one
       var a = document.querySelector("a");
       a.addEventListener("click", function (e) {
         e.preventDefault();
-        alert("Custom behaviour");
+        alert("Custom behavior");
       });
       var form = document.querySelector("form");
       form.addEventListener("submit", function (e) {
         e.preventDefault();
-        alert("Custom behaviour");
+        alert("Custom behavior");
       });
     </script>
   </body>
