--- a/DOM/l5.2-Navigator.html
+++ b/DOM/l5.2-Navigator.html
@@ -13,6 +13,8 @@
     <button onclick="addData()">Add to clipboard</button>
 
     <script>
+          console.log('navigator: ', navigator);
+
       //for adding data into clipboard
       function addData() {
         var input = document.querySelector("input");
