--- a/DOM/l2.5-eveDelegation.html
+++ b/DOM/l2.5-eveDelegation.html
@@ -6,22 +6,25 @@
   </head>
   <body>
     <ul>
-      <li>item</li>
-      <li>item</li>
-      <li>item</li>
-      <li>item</li>
-      <li>item</li>
-      <li>item</li>
-      <li>item</li>
-      <li>item</li>
+      <li>First</li>
+      <li>Second</li>
+      <li>Third</li>
+      <li>Fourth</li>
+      <li>Fifth</li>
+      <li>Sixth</li>
+      <li>Seventh</li>
+      <li>Eight</li>
+      <li>Ninth</li>
+      <li>Tenth</li>
     </ul>
 
     <script>
+      // event delegation is a concept in which we use one element to represents other ex: use "ul" for representing "li"
+
       var ul = document.querySelector("ul");
+
       ul.addEventListener("click", function (e) {
-        var li = e.target;
-        li.textContent += " - clicked...";
-        li.style.color = "red";
+        e.target.style.color = "red";
       });
     </script>
   </body>
